plugin-bazel/src/test/testData/starlark/annotations/rules/MissingRequiredNamedRuleArgumentsAnnotatorTestData.bzl
<error descr="Missing required argument: mandatoryArg.">rule(nonMandatoryArg = 0)</error>

rule(mandatoryArg = 0)